Fix Z-index issues of playground code editor

--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,10 @@
     Licensed by the LiveG Open-Source Licence, which can be found at LICENCE.md.
 */
 
+nav {
+    z-index: 2!important;
+}
+
 img.full {
     width: 100%;
     max-width: unset;
